# graphmagic

./: .cproject  .project  1  CMakeLists.txt  Makefile  README.md  base  buttons.c  buttons.h  buttons_s.h  client.c  common.h  cpu_usage.c  cpu_usage.h  devices.c  devices.h  drawing.c  drawing.h  functions.c  functions.h  functions1.c  functions2.c  interrupts.c  interrupts.h  interrupts_s.h  main  main.c  main_header.h  memory_usage.c  memory_usage.h  memory_usage_s.h  model.c  model.h  network_bandwith.c  network_bandwith.h  old_functions  process-monitor.c  process-statusbar.c  process-tree-model.c  process-tree-model.h  (+18 more)
Client /: 1  CMakeLists.txt  client.c  common.h  cpu_usage.c  cpu_usage.h  devices.c  devices.h  functions.c  functions.h  functions1.c  functions2.c  helo.c  interrupts.c  interrupts.h  interrupts_s.h  memory_usage.c  memory_usage.h  network_bandwith.c  network_bandwith.h  server.c  task_manager.c  task_manager.h  test.txt
Client /test/: functions.c
Untitled Folder/project/client/include/: window.h
Untitled Folder/project/client/src/: drawing.c  testing_tree.c
Untitled Folder/project/server/: Makefile
Untitled Folder/project/server/include/: functions.h
Untitled Folder/project/server/src/: server.c
Untitled Folder/project/src_server/: server.c
makefile_folder/: Makefile
makefile_folder/project/client/include/: buttons.h  buttons_s.h  common.h  drawing.h  functions.h  interrupts.h  main_header.h  testing_tree.h  window.h
makefile_folder/project/client/src/: buttons.c  client.c  drawing.c  functions.c  interrupts.c  testing_tree.c  window.c
makefile_folder/project/common/: common.h
makefile_folder/project/server/include/: common.h  cpu_usage.h  devices.h  functions.h  interrupts.h  network_bandwith.h  task_manager.h
makefile_folder/project/server/src/: cpu_usage.c  devices.c  functions.c  interrupts.c  memory_usage.c  network_bandwith.c  server.c  task_manager.c
makefile_folder/project/src_server/: functions.c  server.c
project/client/include/: buttons_s.h  common.h  functions.h  interrupts.h  testing_tree.h  window.h
project/client/src/: buttons.c  client.c  drawing.c  functions.c  interrupts.c  main.c  testing_tree.c  window.c
project/server/: n.txt
project/server/include/: common.h  functions.h  memory_usage.h  task_manager.h
project/server/src/: cpu_usage.c  devices.c  functions.c  interrupts.c  memory_usage.c  network_bandwith.c  server.c  task_manager.c
project/src_server/: functions.c
temp/: CMakeLists.txt  Makefile  buttons.h  common.h  functions.c  main.c  testing_tree.c  window.c
temp/Client /: client.c  common.h  cpu_usage.h  functions.c  functions.h  interrupts.c  network_bandwith.h  server.c  task_manager.c  task_manager.h
temp/project/client/src/: drawing.c  testing_tree.c
temp/project/server/src/: devices.c  memory_usage.c
